fix(pages/home): adjust hero spacing

--- a/src/pages/_index/_components/hero/styles.module.css
+++ b/src/pages/_index/_components/hero/styles.module.css
@@ -59,10 +59,15 @@
   margin: 0 0 5rem;
 }
 
-.callout {
+.content p span {
+  position: relative;
+  display: inline-block;
+}
+
+.content .callout {
   position: absolute;
-  right: -5%;
-  bottom: -110%;
+  right: -30%;
+  bottom: -175%;
   font-size: 1.35em;
   width: fit-content;
   white-space: nowrap;
@@ -89,26 +94,27 @@
 }
 
 .img.underline {
-  bottom: -25%;
-  right: 11.5%;
-  width: 69%;
+  bottom: -50%;
+  right: 0;
+  width: 77%;
 }
 
 .img.arrow {
-  bottom: -20%;
-  right: 0;
-  width: 10%;
-  transform: rotate(50deg);
+  top: -77%;
+  left: 40%;
+  width: 32%;
+  transform: rotate(34deg);
 }
 
 @media (min-width: 576px) {
-  .callout {
-    right: -28%;
-    bottom: -25%;
+  .content .callout {
+    left: 100%;
+    bottom: -100%;
   }
 
   .img.arrow {
-    transform: none;
-    bottom: 10%;
+    transform: rotate(25deg);
+    top: -70%;
+    left: 5%;
   }
 }
